unpackaged/main/default/objects/Presales__c/Presales__c.object-meta.xml
<CustomObject>
    <description>Used by Pre-Sales team to track Activity</description>
    <label>Presales Activity</label>
    <nameField>
        <displayFormat>PS - {000000}</displayFormat>
        <label>Presales No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Presales Activity</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>