unpackaged/main/default/objects/Presales__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Please select Customer Account if it&#39;s not an internal Activity.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Presales Activity</relationshipLabel>
    <relationshipName>Presales_Activity</relationshipName>
    <type>Lookup</type>
</CustomField>