unpackaged/main/default/objects/Presales__c/fields/Activity_Date__c.field-meta.xml
<CustomField>
    <fullName>Activity_Date__c</fullName>
    <label>From Date</label>
    <type>Date</type>
</CustomField>