unpackaged/main/default/objects/Presales__c/fields/Activity_Duration__c.field-meta.xml
<CustomField>
    <fullName>Activity_Duration__c</fullName>
    <inlineHelpText>Duration (Hours)?</inlineHelpText>
    <label>Activity Duration</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>