unpackaged/main/default/objects/Presales__c/fields/Activity_Month__c.field-meta.xml
<CustomField>
    <fullName>Activity_Month__c</fullName>
    <formula>IF(MONTH(Activity_Date__c)&lt;10, 
TEXT(YEAR(Activity_Date__c)) &amp; &#39;-0&#39;&amp; TEXT(MONTH(Activity_Date__c)), 
TEXT(YEAR(Activity_Date__c)) &amp; &#39;-&#39;&amp; TEXT(MONTH(Activity_Date__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Activity Month</label>
    <type>Text</type>
</CustomField>