unpackaged/main/default/objects/Presales__c/fields/Activity_Scenario__c.field-meta.xml
<CustomField>
    <fullName>Activity_Scenario__c</fullName>
    <formula>IF(Account__r.Name = &#39;TechnologyOne&#39;,&#39;3. No Opportunity - T1 Internal&#39;, 
IF(Opportunity__r.Name = &#39;No Opportunity&#39;, &#39;2. No Opportunity - Customer&#39;, 
  &#39;1. Sales Opportunity&#39;))</formula>
    <label>Activity Scenario</label>
    <type>Text</type>
</CustomField>