unpackaged/main/default/objects/Presales__c/fields/Activity_Type__c.field-meta.xml
<CustomField>
    <fullName>Activity_Type__c</fullName>
    <label>Activity Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Account Planning</fullName>
            </value>
            <value>
                <fullName>Bid Meeting</fullName>
            </value>
            <value>
                <fullName>Consulting</fullName>
            </value>
            <value>
                <fullName>Customer Meeting/Call</fullName>
            </value>
            <value>
                <fullName>Demo Follow Up</fullName>
            </value>
            <value>
                <fullName>Demonstration</fullName>
            </value>
            <value>
                <fullName>Demo Prep</fullName>
            </value>
            <value>
                <fullName>Demo Prep - Assistance</fullName>
            </value>
            <value>
                <fullName>Demo Shadowing</fullName>
            </value>
            <value>
                <fullName>Demo System Maintenance</fullName>
            </value>
            <value>
                <fullName>Discovery</fullName>
            </value>
            <value>
                <fullName>Internal Meeting</fullName>
            </value>
            <value>
                <fullName>Mentoring</fullName>
            </value>
            <value>
                <fullName>Proposal</fullName>
            </value>
            <value>
                <fullName>R&amp;D Work No Sales Opportunity</fullName>
                <label>R&amp;D Work</label>
            </value>
            <value>
                <fullName>T1 Events (e.g. showcase etc)</fullName>
            </value>
            <value>
                <fullName>Tender</fullName>
            </value>
            <value>
                <fullName>Training Attending</fullName>
            </value>
            <value>
                <fullName>Training Prep</fullName>
            </value>
            <value>
                <fullName>Training Teaching</fullName>
            </value>
            <value>
                <fullName>Travel time</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>