unpackaged/main/default/objects/Presales__c/fields/Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Presales Consultant</inlineHelpText>
    <label>z_Assigned To</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.Account.Name</field>
            <operation>contains</operation>
            <value>TechnologyOne</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Presales Activity</relationshipLabel>
    <relationshipName>Presales_Activity</relationshipName>
    <type>Lookup</type>
</CustomField>