unpackaged/main/default/objects/Presales__c/fields/Assigned_To_Country__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To_Country__c</fullName>
    <formula>AssignedTo__r.Country</formula>
    <label>Assigned To Country</label>
    <type>Text</type>
</CustomField>