unpackaged/main/default/objects/Presales__c/fields/Assigned_To_Department__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To_Department__c</fullName>
    <formula>AssignedTo__r.Department</formula>
    <label>Assigned To Department</label>
    <type>Text</type>
</CustomField>