unpackaged/main/default/objects/Presales__c/fields/Attendees__c.field-meta.xml
<CustomField>
    <fullName>Attendees__c</fullName>
    <label>Attendees</label>
    <type>TextArea</type>
</CustomField>