unpackaged/main/default/objects/Presales__c/fields/Date_Difference__c.field-meta.xml
<CustomField>
    <fullName>Date_Difference__c</fullName>
    <formula>IF(Opportunity__r.Name=&#39;No Opportunity&#39;,0, Opportunity__r.CloseDate - Activity_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Difference between Opportunity Close date and From date</inlineHelpText>
    <label>Date Difference</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>