unpackaged/main/default/objects/Presales__c/fields/Environment_URL__c.field-meta.xml
<CustomField>
    <fullName>Environment_URL__c</fullName>
    <label>Environment URL</label>
    <type>Url</type>
</CustomField>