unpackaged/main/default/objects/Presales__c/fields/Group_Region__c.field-meta.xml
<CustomField>
    <fullName>Group_Region__c</fullName>
    <formula>IF(Account__r.Name = &#39;TechnologyOne&#39;, &#39;T1 Internal&#39;, Account__r.Group_Region__c)</formula>
    <label>Group Region</label>
    <type>Text</type>
</CustomField>