unpackaged/main/default/objects/Presales__c/fields/Industry_Vertical__c.field-meta.xml
<CustomField>
    <fullName>Industry_Vertical__c</fullName>
    <formula>IF(Account__r.Name = &#39;TechnologyOne&#39;, &#39;T1 Internal&#39;, TEXT(Account__r.Vertical_Market__c))</formula>
    <label>Industry/Vertical</label>
    <type>Text</type>
</CustomField>