unpackaged/main/default/objects/Presales__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Please select No Opportunity if Activity Type is internal or Demo No Sales Opp.</inlineHelpText>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Presales Activity</relationshipLabel>
    <relationshipName>Pre_Sales</relationshipName>
    <type>Lookup</type>
</CustomField>