unpackaged/main/default/objects/Presales__c/fields/Prep_Time__c.field-meta.xml
<CustomField>
    <fullName>Prep_Time__c</fullName>
    <inlineHelpText>Estimated Prep Time (Hours)?</inlineHelpText>
    <label>z_Prep Time</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>