unpackaged/main/default/objects/Presales__c/fields/Solution__c.field-meta.xml
<CustomField>
    <fullName>Solution__c</fullName>
    <formula>TEXT(Opportunity__r.Solution__c)</formula>
    <label>Solution</label>
    <type>Text</type>
</CustomField>