unpackaged/main/default/objects/Presales__c/validationRules/Check_FromDate_over_ToDate.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_FromDate_over_ToDate</fullName>
    <active>true</active>
    <errorConditionFormula>NOT (ISBLANK(To_Date__c)) &amp;&amp; 
(Activity_Date__c &gt; To_Date__c)</errorConditionFormula>
    <errorDisplayField>Activity_Date__c</errorDisplayField>
    <errorMessage>From Date can&#39;t be over To Date.</errorMessage>
</ValidationRule>