unpackaged/main/default/objects/Presales__c/listViews/Presales_Activity_HRP.listView-meta.xml
<ListView>
    <fullName>Presales_Activity_HRP</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Activity_Date__c</columns>
    <columns>Activity_Duration__c</columns>
    <columns>Activity_Type__c</columns>
    <columns>Product__c</columns>
    <columns>Solution__c</columns>
    <columns>Attendees__c</columns>
    <columns>Notes__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product__c</field>
        <operation>equals</operation>
        <value>Human Resources and Payroll</value>
    </filters>
    <label>Presales Activity - HRP</label>
</ListView>