unpackaged/main/default/objects/Presales__c/listViews/Presales_Activity_No_Opportunity.listView-meta.xml
<ListView>
    <fullName>Presales_Activity_No_Opportunity</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Assigned_To__c</columns>
    <columns>Activity_Type__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Activity_Date__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Opportunity__c</field>
        <operation>equals</operation>
        <value>No Opportunity</value>
    </filters>
    <filters>
        <field>Activity_Type__c</field>
        <operation>notEqual</operation>
        <value>Account Planning,Demo No Sales Opp,Internal Meeting,Travel time</value>
    </filters>
    <label>Presales Activity - No Opportunity</label>
</ListView>