unpackaged/main/default/objects/Presales__c/listViews/Presales_Activity_Not_Assigned_to.listView-meta.xml
<ListView>
    <fullName>Presales_Activity_Not_Assigned_to</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Assigned_To__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Activity_Type__c</columns>
    <columns>Activity_Date__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Assigned_To__c</field>
        <operation>equals</operation>
    </filters>
    <label>Presales Activity - Not Assigned to</label>
</ListView>